Removed z-index from modal to prevent them from blocking the main navigation

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -150,6 +150,10 @@ body {
   }
 }
 
+.modal {
+  z-index: inherit;
+}
+
 // ngGrid styles overwrites.
 .ngViewport {
   height: auto !important;
@@ -158,6 +162,10 @@ body {
 .ngRow {
   position: static;
   height: auto !important;
+}
+
+.ngTopPanel {
+  z-index: inherit;
 }
 
 // Custom styles.
